k8s/ns.yaml
apiVersion: v1 
kind: Namespace 
metadata:
  name: amazon-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: meesho-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: ajio-ns
